--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "next": "14.2.3",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
