--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/recharts": "^1.8.29",
     "bootstrap": "^5.3.3",
+    "lucide-react": "^0.511.0",
     "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
+    "recharts": "^2.15.3",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
